text wrap fix

--- a/src/components/project-card.css
+++ b/src/components/project-card.css
@@ -2,17 +2,11 @@
 .project-card {
   display: grid;
   grid-template-columns: 40% auto;
-  /* grid-template-rows: repeat(2, auto); */
   padding: 10px;
   background-color: #f4f4f4;
   border-radius: 3px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.15);
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  word-break: break-word;
-  hyphens: auto;
-  white-space: pre-line;
 }
 
 li .project-card {
